Added second "card" and some fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,7 @@
 {
   "name": "Brit Sergey",
   "company": "Flutter Developer",
-  "copied": "Email copied to clipboard"
+  "copied": "Email copied to clipboard",
+  "aboutMe": "About Me",
+  "aboutMeText": "I am Sergey Brit, a Flutter developer. I love creating beautiful and user-friendly mobile apps. Open to new projects and collaborations!"
 }
