--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,5 +1,7 @@
 {
   "name": "Брит Сергей",
   "company": "Флаттер-разработчик",
-  "copied": "Email скопирован в буфер"
+  "copied": "Email скопирован в буфер",
+  "aboutMe": "О себе",
+  "aboutMeText": "Я Сергей Брит, Flutter-разработчик. Люблю создавать красивые и удобные мобильные приложения. Открыт для новых проектов и сотрудничества!"
 }
